# microservices-decomposition-variability

./: README.md  pyproject.toml
analysis/: clustering_analysis.ipynb  semantic_layer.ipynb  sensitivity_analysis.ipynb
cargo/: Activator.java  CargoHandledConsumer.java  HandlingReportServiceImpl.java  JmsApplicationEventsImpl.java  RouteSpecification.java  SampleDataGenerator.java  UnLocode.java  application.txt  cargo_128scenarios_nopolicies_sobol_graph.pkl  cargo_128scenarios_nopolicies_sobol_partitions.pkl  cargo_results.csv  entity.txt  utility.txt
cargo/microminer/: cargo_128scenarios_nopolicies_sobol.pkl  cargo_128scenarios_nopolicies_sobol_graph.pkl  cargo_128scenarios_nopolicies_sobol_partitions.pkl  cargo_call_graph.csv  cargo_stable_solutions.pkl
cargo/mid/: cargo_128scenarios_nopolicies_sobol_model.pkl  cargo_128scenarios_nopolicies_sobol_partitions.pkl  cargo_stable_solutions.pkl  graph.pickle
cargo/output/: application.txt  entity.txt  microservices.csv  utility.txt
data/: classifier.joblib
jpetstore/: JPetStore_results.csv  application.txt  jpetstore_128scenarios_nopolicies_sobol_graph.pkl  jpetstore_128scenarios_nopolicies_sobol_model.pkl  jpetstore_128scenarios_nopolicies_sobol_partitions.pkl  jpetstore_kdm.xmi
jpetstore/microminer/: jpetstore_128scenarios_nopolicies_sobol_graph.pkl  jpetstore_128scenarios_nopolicies_sobol_partitions.pkl  jpetstore_call_graph.csv  jpetstore_stable_solutions.pkl
jpetstore/mid/: graph.pickle  jpetstore_128scenarios_nopolicies_sobol_graph.pkl  jpetstore_omega_scores.csv  (+3 more)
microminer_eval/: main.py  main_emat.py  microminer.py  parameter_matrix.py  partition_matrix.py
(+9 files in other folders)
