[tool.poetry]
name = "microminer-eval"
version = "0.1.1"
description = ""
authors = ["Ana Martínez Saucedo <anmartinez@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "microminer_eval"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
transformers = "^4.36.2"
torch = "^2.1.2"
joblib = "^1.3.2"
numpy = "^1.26.3"
scikit-learn = "1.2.2"
scipy = "1.10.1"
cdlib = "^0.3.0"
networkx = "^3.2.1"
nltk = "^3.8.1"
gensim = "^4.3.2"
semantic-router = {extras = ["local"], version = "^0.0.72"}
pandas = "^2.2.3"
ema-workbench = "^2.5.1"
llama-index = "^0.12.6"
jupyter = "^1.1.1"
scikit-learn-extra = "^0.3.0"
llama-index-llms-groq = "^0.3.1"
llama-index-llms-huggingface = "^0.4.1"
ipykernel = "^6.29.5"
groq = "^0.13.1"
llama-index-llms-huggingface-api = "^0.3.0"
llama-index-experimental = "^0.5.2"
llama-index-embeddings-huggingface = "^0.4.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
